# GNN-PE

./: CMakeLists.txt  README.md  requirements.txt
GNN-PE/: CMakeLists.txt  gnnpe.py
GNN-PE/include/: custom.h  rand.h
GNN-PE/include/blockfile/: blk_file.h  cache.h
GNN-PE/include/configuration/: types.h
GNN-PE/include/heap/: heap.h
GNN-PE/include/linlist/: linlist.h
GNN-PE/include/rtree/: entry.h  rtnode.h  rtree.h
GNN-PE/include/utility/: bitsetoperation.h  commandparser.h
GNN-PE/include/utility/han/: intersection_algos.hpp
GNN-PE/include/utility/han/utils/: util.hpp
GNN-PE/libsrc/blockfile/: blk_file.cpp  cache.cpp
GNN-PE/libsrc/graph/: graph.cpp
GNN-PE/libsrc/heap/: heap.cpp
GNN-PE/libsrc/linlist/: linlist.cpp
GNN-PE/libsrc/rtree/: entry.cpp  rtnode.cpp  rtree.cpp
GNN-PE/libsrc/utility/: bitsetoperation.cpp
GNN-PE/src/: CMakeLists.txt  cdf.cpp  main.cpp  rand.cpp
GNN-PGE/: gnnpge.py
GNN-PGE/include/: cdf.h  custom.h
GNN-PGE/include/configuration/: config.h
GNN-PGE/include/func/: gendef.h
GNN-PGE/include/graph/: graph.h
GNN-PGE/include/utility/: QFliter.h  computesetintersection.h  graphoperations.h  pretty_print.h
GNN-PGE/libsrc/: CMakeLists.txt
GNN-PGE/libsrc/func/: functions.cpp
GNN-PGE/libsrc/rtree/: rtree_cmd.cpp
GNN-PGE/libsrc/utility/: commandparser.cpp  computesetintersection.cpp  graphoperations.cpp
GNN-PGE/libsrc/utility/han/: intersection_algos.cpp
GNN-PGE/libsrc/utility/han/utils/: util.cpp
GNN-PGE/src/: main.cpp
Test/: data_graph.graph  query_graph.graph
datasets/: README.md
